# agent-ready

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  LICENSE  Makefile  README.md  RELEASE.md  action.yml  pyproject.toml
.agent/: checklist.md  context.json
.github/workflows/: ci.yml
agent_ready/: __init__.py  cli.py  generator.py  scanner.py  score.py
docs/: architecture.mmd  product-research.md
tests/: test_agent_ready.py
