[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ready"
version = "0.1.0"
description = "Generate AGENTS.md, CLAUDE.md, CODEX.md, and context files that make repos easier for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Adam Chau"}]
keywords = ["ai-agents", "claude-code", "codex", "openclaw", "developer-tools"]
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "ruff>=0.8",
]

[project.scripts]
agent-ready = "agent_ready.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["agent_ready*"]
exclude = ["assets*", "examples*", "tests*"]
